env/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "tgapp.fans"
      secretName: tgapp.fans-tls
  rules:
    - host: "tgapp.fans"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-main-service
                port:
                  number: 3000
